<resources>
    <string name="app_name">App Portfolio</string>

    <string name="title_nanodegree_app">My Nanodegree Apps</string>

    <string name="button_popular_movies">popular movies</string>
    <string name="button_stock_hawk">stock hamk</string>
    <string name="button_build_it_bigger">build it bigger</string>
    <string name="button_make_your_app_material">make your app material</string>
    <string name="button_go_ubiquitous">go ubiquitous</string>
    <string name="button_capstone_my_own_app">capstone: my own app</string>


</resources>
