<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.fernando.portfolio.MainActivity"
    android:background="@color/backgroundApp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_nanodegree_app"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="@dimen/big_text_size_plus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:layout_constraintVertical_bias="0.077" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_title"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_popular_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_popular_movies"
            android:layout_marginTop="30dp"
            style="@style/ButtonMenu"
            />

        <Button
            android:id="@+id/bt_stock_hank"
            style="@style/ButtonMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_stock_hawk" />

        <Button
            android:id="@+id/bt_build_it_bigger"
            style="@style/ButtonMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_build_it_bigger" />

        <Button
            android:id="@+id/bt_make_your_app_material"
            style="@style/ButtonMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_make_your_app_material" />

        <Button
            android:id="@+id/bt_go_ubiquitous"
            style="@style/ButtonMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_go_ubiquitous" />

        <Button
            android:id="@+id/bt_my_own_app"
            style="@style/ButtonMenu"
            android:background="@color/backgroundButtonMyApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_make_your_app_material"/>

        </LinearLayout>




</RelativeLayout>
